2009-12-21  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSScrollView.m (-isOpaque): Fix bug where an NSScrollView
	incorrectly claimed to be opaque while its clip view is not.

	* Source/NSOpenPanel.m (-setCanChooseDirectories): Reset the
	current selection of an open panel when directory selection is
	disabled. This prevents bogus directories being returned from the
	next modal session of the panel.

	* Source/NSSavePanel.m (-resetDefaults): Also reset the
	allowsOtherFileTypes attribute to its default when a fresh save
	panel is requested.

2009-12-21 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/GSIconManager.h,
	* Source/GSIconManager.m: New files. Allows to get icon placement
	from separate process.
	* Source/GNUmakefile: Add new file.
	* Source/NSWindow.m,
	* Source/NSApplication.m: Move icon handling into new file.
	Patch by German Arias <german@xelalug.org>.

2009-12-20 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSColorWell.m: Draw a black-and-white pattern behind
	transparent color swatches. 

2009-12-20 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSColor.m: -[GSRGBColor isEqual:] was ignoring the alpha
	channel when testing equality.

2209-12-20 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSColorWell.m
	* Source/GSThemeDrawing.m
	* Source/NSColorPanel.m
	* Headers/AppKit/NSColorWell.h: 
	Finish NSColorWell interaction tweaks:
	- activation of the now happens on mouseUp, not mouseDown
	- non-bordered NSColorWells can't be activated by clicking
	- non-bordered NSColorWells start a drag operation upon mouseDown
	- disabled NSColorWells don't accept colours being dropped on them
	- dropping a colour on the well inside the NSColorPanel now
	  also updates the active NSColorWell
	Also moved the static variable for keeping track of where the mouseDown
	occurred to an instance variable.

2009-12-21 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/NSTableColumn.m (-initWithCoder:, -encodeWithCoder:): Add